--- a/docs/2301.md
+++ b/docs/2301.md
@@ -1,7 +1,59 @@
-# 111
+we wiki : https://mineplugin.org/WorldEdit/%E5%91%BD%E4%BB%A4
 
-## 222222
+本页介绍了一些主要的指令、工具等，如需更详细地了解请查看wiki或google等。
 
-# 111111
+# 基础指令
 
-## 22222
+## 选区
+
+
+
+### 选择模式
+
+长方体模式`//sel cuboid`以2个选取点创建长方体。
+
+拓展长方体模式`//sel extend`可以选取多个二号选取点，长方体始终包含所有的选取点。
+
+球体模式`//sel sphere`以一号选取点为球心，一号到二号选取点的距离为半径。
+
+圆柱体模式`//sel cyl`一号选取点为中心，二号选取点扩大地面，再次选取二号选取点提升高度。
+
+
+
+### 选取选取点
+
+`//wand `  获取小木斧，用小木斧左键/右键分别选取一号选取点和二号选取点。
+
+`//pos1`  `//pos2`  当前位置选取选取点 。     
+
+
+
+### 选区操作
+
+绘制线段				`//line `	对长方体选区的2个顶点之间绘制线段                                                     
+
+设置选区内所有方块	`//set` 
+
+替换方块				`//rep [] []`
+
+表面覆盖				`//overlay`
+
+建立墙壁				`//walls `选区四周建立墙壁
+
+平滑化				    `//smooth`
+
+移动					`//move`
+
+堆叠延伸				`//stack`
+
+复制和剪切			   `//copy` `//cut`
+
+粘贴					`//paste`
+
+旋转					`//rotate`
+
+翻转					`//flip`
+
+撤销                                        `//undo` 
+
+# 进阶指令
